<resources>
    <string name="app_name">Wandee AI</string>
    <string name="todo">TODO</string>
    <string name="talk">MIC</string>
    <string name="TextView">TextView</string>
    <string name="MIC">MIC</string>
    <string name="protraitText">Protrait</string>
    <string name="landscapeText">Landscape</string>
    <string-array name="welcome_text">
        <item>สวัสดี เจ้านาย</item>
        <item>Hello Master</item>
        <item>您好，主人</item>
        <item>こんにちは、ご主人様</item>
        <item>Hai Tuan</item>
        <item>Kumusta, Guro</item>
        <item>Halo, Tuan</item>
        <item>ສະບາຍດີ ພະນາຍົດ</item>
        <item>안녕하세요, 주인님</item>
        <item>Chào chủ nhân</item>
        <item>Hola Maestro</item>
        <item>Bonjour Maître</item>
        <item>Hallo Meister</item>
        <item>Ciao Padrone</item>
        <item>Olá Mestre</item>
        <item>Здравствуйте, хозяин</item>
        <item>Hallo Meester</item>
        <item>Hej Mästare</item>
        <item>Hei Mester</item>
        <item>Hej Mester</item>
        <item>Hei Mestari</item>
        <item>Witaj Panie</item>
        <item>Merhaba Efendim</item>
        <item>שלום אדוני</item>
        <item>مرحبًا سيدي</item>
        <item>سلام استاد</item>
        <item>Szia, mester</item>
        <item>Ahoj Mistře</item>
        <item>Ahoj Majstre</item>
        <item>Привіт, Майстре</item>
        <item>Salut, Stăpâne</item>
    </string-array>
    <string name="hello_text">สวัสดี</string>
    <string name="msg">Message</string>
    <string name="send">.</string>
    <string name="submit">Submit</string>
    <string name="prompt">Prompt</string>
    <string name="delete">Delete</string>
    <string name="replace">Replace</string>
    <string name="home">Home</string>
    <string name="newanswer">New answer</string>
    <string name="databasemanage">Database</string>
    <string name="databaseimage">Image Database</string>
    <string name="imageMod">Image Modification</string>
    <string name="selectImage">Select Image</string>
    <string name="selectAI">Select AI</string>
    <string name="AI1">AI 1</string>
    <string name="AI2">AI 2</string>
    <string name="AI3">AI 3</string>
    <string name="AI4">AI 4</string>
    <string name="AI5">AI 5</string>
    <string name="AI6">AI 6</string>
    <string name="AI7">AI 7</string>
    <string name="AI8">AI 8</string>
    <string name="AI9">AI 9</string>
    <string name="AI10">AI 10</string>
    <string name="api_enter">Enter your OpenAI API Key here</string>
    <string name="api_key_help">Please follow below steps.\n\n1.Open internet browser and go to https://openai.com\n2.Click menu and log in\n3.Select API\n4.Find the lock icon and click API keys\n5.Create new secret key\n6.Enter the secret key into App Wandee\n\nYou can read PDF or watch video for more details.</string>
    <string name="checkAPI_status">API status: None</string>
    <string name="settings">Settings</string>
    <string name="show_text">Hello Master, This is your text appearance.</string>
    <string name="set_font">Font size:</string>
    <string name="set_language">Language:</string>
    <string name="save">Save</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="text_to_speech">Text to speech mode</string>
    <string name="set_imageSize">Image size:</string>
    <string name="set_notification">Notification:</string>
    <string name="chat_mode">Chat mode</string>
    <string name="help">Help</string>
    <string name="about">About Wandee</string>
    <string name="appTheme">Theme:</string>
    <string name="gptModel">AI Model:</string>
    <string name="contribute">Contribute Wandee</string>
    <string name="loading">Loading</string>
    <string name="ad">Sponsored</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="exit">Exit</string>
    <string name="image">Image</string>
    <string-array name="mask">
        <item>วาดหน้ากากเพื่อระบุพื้นที่ที่จะแทนที่ ปรับแถบเลื่อนเพื่อเปลี่ยนขนาดหน้ากาก</item>
        <item>Draw a mask to indicate the areas to be replaced. Adjust the slider to change the mask size.</item>
        <item>绘制蒙版以指示要替换的区域。调整滑块以更改蒙版大小。</item>
        <item>置換する領域を示すマスクを描画します。スライダーを調整してマスクのサイズを変更します。</item>
        <item>Lukiskan topeng untuk menunjukkan kawasan yang hendak digantikan. Laraskan gelangsar untuk menukar saiz topeng.</item>
        <item>Gumuhit ng maskara para ipahiwatig ang mga lugar na papalitan. I-adjust ang slider para baguhin ang laki ng maskara.</item>
        <item>Gambar masker untuk menunjukkan area yang akan diganti. Sesuaikan slider untuk mengubah ukuran masker.</item>
        <item>ແຕ້ມໜ້າກາກເພື່ອຊີ້ບອກພື້ນທີ່ທີ່ຈະທົດແທນ. ປັບແຖບเลື່ອນເພື່ອປ່ຽນຂະໜາດໜ້າກາກ.</item>
        <item>바꿀 영역을 나타내는 마스크를 그립니다. 슬라이더를 조정하여 마스크 크기를 변경합니다.</item>
        <item>Vẽ mặt nạ để chỉ các vùng cần thay thế. Điều chỉnh thanh trượt để thay đổi kích thước mặt nạ.</item>
        <item>Dibuje una máscara para indicar las áreas que se van a reemplazar. Ajuste el control deslizante para cambiar el tamaño de la máscara.</item>
        <item>Dessinez un masque pour indiquer les zones à remplacer. Ajustez le curseur pour modifier la taille du masque.</item>
        <item>Zeichnen Sie eine Maske, um die zu ersetzenden Bereiche zu markieren. Passen Sie den Schieberegler an, um die Maskengröße zu ändern.</item>
        <item>Disegna una maschera per indicare le aree da sostituire. Regola il cursore per modificare la dimensione della maschera.</item>
        <item>Desenhe uma máscara para indicar as áreas a serem substituídas. Ajuste o controle deslizante para alterar o tamanho da máscara.</item>
        <item>Нарисуйте маску, чтобы указать области для замены. Отрегулируйте ползунок, чтобы изменить размер маски.</item>
        <item>Teken een masker om de te vervangen gebieden aan te geven. Verstel de schuifregelaar om de masker grootte te wijzigen.</item>
        <item>Rita en mask för att indikera de områden som ska ersättas. Justera skjutreglaget för att ändra maskens storlek.</item>
        <item>Tegn en maske for å indikere områdene som skal erstattes. Juster glidebryteren for å endre maskestørrelsen.</item>
        <item>Tegn en maske for at angive de områder, der skal udskiftes. Juster skyderen for at ændre maskestørrelsen.</item>
        <item>Piirrä maski osoittamaan alueet, jotka korvataan. Säädä liukusäädintä maskin koon muuttamiseksi.</item>
        <item>Narysuj maskę, aby wskazać obszary do zastąpienia. Dostosuj suwak, aby zmienić rozmiar maski.</item>
        <item>Değiştirilecek alanları belirtmek için bir maske çizin. Maske boyutunu değiştirmek için sürgüyü ayarlayın.</item>
        <item>שרטט מסכה כדי לציין את האזורים להחלפה. כייל את המחוון כדי לשנות את גודל המסכה.</item>
        <item>ارسم قناعًا للإشارة إلى المناطق المراد استبدالها. اضبط شريط التمرير لتغيير حجم القناع.</item>
        <item>برای نشان دادن مناطقی که باید جایگزین شوند، یک ماسک بکشید. برای تغییر اندازه ماسک، نوار لغزنده را تنظیم کنید.</item>
        <item>Rajzoljon egy maszkot a cserélendő területek jelöléséhez. A maszk méretének módosításához állítsa be a csúszkát.</item>
        <item>Nakreslete masku pro označení oblastí, které chcete nahradit. Velikost masky změníte pomocí posuvníku.</item>
        <item>Nakreslite masku na označenie oblastí, ktoré chcete nahradiť. Veľkosť masky zmeníte pomocou posúvača.</item>
        <item>Накресліть маску, щоб указати області для заміни. Відрегулюйте повзунок, щоб змінити розмір маски.</item>
        <item>Desenați o mască pentru a indica zonele care vor fi înlocuite. Reglați cursorul pentru a modifica dimensiunea măștii.</item>
    </string-array>
    <string name="ad_short">Ad</string>
    <string name="search">Search</string>
    <string name="menu">Menu</string>
    <string name="clear">Clear</string>
    <string name="hide_PDF">Hide PDF</string>
    <string name="hide_openAI">Hide Video</string>
    <string name="tts">TTS</string>
    <string name="rapid_key">Enter Rapid API key here</string>
    <string name="news_update">Inquire about the current situation or the latest product prices</string>
    <string name="world_update">World update</string>
    <string name="Wandee_world_update">Wandee World Update</string>
    <string name="gemini_key">Enter your Google AI API key here</string>
    <string name="copy">Copy</string>
    <string name="quote">Quote</string>
    <string name="max_message">Max messages in chat:</string>
    <string name="i100">100</string>
    <string name="messages">messages</string>
    <string name="selectYourImage">Select image from the gallery to start image modification. \nPlease note that image are automatically resized to supported dimensions (1024x1024, 512x512, or 256x256) in PNG format before modification. For best results, select a square image.</string>
    <string name="custom_assistant">Custom Assistant</string>
    <string name="chat_background">Chat background image: </string>
</resources>