<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/api_key"
    tools:context=".APIKeyPage">

    <ScrollView
        android:id="@+id/SV7"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/api_key_help"
                android:textAlignment="gravity"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/editText3"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:autofillHints="write here"
                    android:background="@drawable/edittext_border"
                    android:hint="@string/api_enter"
                    android:inputType="textMultiLine"
                    android:maxLines="3"
                    android:minHeight="50dp"
                    android:padding="8dp"
                    android:textAppearance="@style/SmallTextAppearance"
                    android:textColor="@color/black"
                    android:textColorHint="@color/textHint" />

                <ImageButton
                    android:id="@+id/button7"
                    style="?android:attr/buttonBarButtonStyle"
                    android:src="@drawable/send_icon"
                    android:contentDescription="@string/send"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/checkAPI_status"
                android:textAlignment="center"
                android:textSize="12sp" />

            <WebView
                android:id="@+id/webView"
                android:layout_width="match_parent"
                android:layout_height="100dp" />

            <WebView
                android:id="@+id/webView2"
                android:layout_width="match_parent"
                android:layout_height="100dp" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/enabledButtonSend"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/imageIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image"
            android:layout_gravity="bottom"
            android:src="@drawable/small_miku"/>

        <Button
            android:id="@+id/button17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/dark"
            android:text="@string/hide_PDF"
            android:textColor="@color/white"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/button18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hide_openAI"
            android:textColor="@color/white"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/button15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/dark"
            android:text="@string/tts"
            android:textColor="@color/white"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/button19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:textColor="@color/white"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
</LinearLayout>