<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/image_mod"
    tools:context=".ImageMod">

    <TextView
        android:id="@+id/textView30"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/title_border"
        android:padding="8dp"
        android:text="@string/imageMod"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout10"/>

    <LinearLayout
        android:id="@+id/linearLayout10"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/textView30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/imageFrame3">

        <ImageButton
            android:id="@+id/imageButton9"
            style="@android:style/Widget.DeviceDefault.Button.Borderless"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/delete"
            android:src="@drawable/clear_button" />

        <SeekBar
            android:id="@+id/seekBar1"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:max="500"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/imageButton10"
            style="@android:style/Widget.DeviceDefault.Button.Borderless"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/save"
            android:src="@drawable/save_picture_button" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout11"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="2dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/imageFrame3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/textView29">
        <ImageView
            android:id="@+id/imgDB"
            android:src="@drawable/img_db"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:background="@drawable/textview_border"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/databaseimage"/>

        <ImageView
            android:id="@+id/imagePNG"
            android:src="@drawable/image"
            android:layout_width="75dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/image"/>

        <ImageView
            android:id="@+id/maskPNG"
            android:src="@drawable/mask"
            android:layout_width="75dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/mask"/>

        <ImageView
            android:id="@+id/qPNG"
            android:src="@drawable/q"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/textview_border"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/help"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textView29"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:gravity="center"
        android:hint="@string/selectYourImage"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/linearLayout11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout9"/>

    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="2dp"
        app:layout_constraintTop_toBottomOf="@+id/textView29"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageButton
            android:id="@+id/imageButton7"
            style="@android:style/Widget.DeviceDefault.Button.Borderless"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/selectImage"
            android:background="@color/teal_700"
            android:src="@android:drawable/ic_menu_gallery" />

        <EditText
            android:id="@+id/editText6"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:padding="8dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:textSize="14sp"
            android:hint="@string/prompt"
            android:autofillHints="write here"
            android:inputType="textMultiLine"
            android:maxLines="3"
            android:background="@drawable/edittext_border"/>

        <ImageButton
            android:id="@+id/imageButton8"
            style="@android:style/Widget.DeviceDefault.Button.Borderless"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/submit"
            android:src="@drawable/send_icon" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/imageFrame3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout11">

        <com.psn.myai.DrawableView
            android:id="@+id/drawableView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/transparent"/>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>